fixes markdown line break on block view

--- a/components/block_collection/stylesheets/block_collection.styl
+++ b/components/block_collection/stylesheets/block_collection.styl
@@ -166,6 +166,7 @@ privacy-color('.list__block--channel--', color)
   h3
     font-size 1em
     line-height 1.3em
+
   p
     margin-bottom 15px
     font-size 1em
@@ -196,7 +197,7 @@ privacy-color('.list__block--channel--', color)
     padding 0
 
   hr
-    margin 30px 35px
+    margin 20px 0px
     border 0
     border-top 1px solid bordergray
     box-sizing none
